# robotics-playground

./: LICENSE
ROS2/: README.md
ROS2/ros2_ws/src/basics_pubsub/: package.xml  setup.cfg  setup.py
ROS2/ros2_ws/src/basics_pubsub/basics_pubsub/: simple_pub.py  simple_sub.py
ROS2/ros2_ws/src/basics_pubsub/launch/: demo.launch.py
ROS2/ros2_ws/src/basics_pubsub/resource/: basics_pubsub
ROS2/ros2_ws/src/basics_pubsub_cpp/: CMakeLists.txt  package.xml
ROS2/ros2_ws/src/basics_pubsub_cpp/launch/: demo_cpp.launch.py
ROS2/ros2_ws/src/basics_pubsub_cpp/src/: simple_pub.cpp  simple_sub.cpp
ROS2/ros2_ws/src/sim_gazebo/: package.xml  setup.py
ROS2/ros2_ws/src/sim_gazebo/launch/: spawn_box.launch.py
ROS2/ros2_ws/src/sim_gazebo/models/box/: model.sdf
ROS2/ros2_ws/src/sim_gazebo/resource/: sim_gazebo
ROS2/scripts/: bootstrap_ros2_basics.sh
