<?xml version="1.0"?>
<package format="3">
  <name>basics_pubsub</name>
  <version>0.0.1</version>
  <description>Simple ROS2 pub/sub demo package.</description>
  <maintainer email="andrew@example.com">Andrew Lockwood</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
